--- a/test/resource/test_bus_query.html
+++ b/test/resource/test_bus_query.html
@@ -114,7 +114,8 @@
             </div>
             <div class="about_right">
                 <div class="right_head">
-                    <span id="navtitle" style="font-size:16px;color:#0E306A;position: absolute;left: 30px;top:0px;"></span><span>您现在的位置：<a href="/Page/">首页</a> > <a
+                    <span id="navtitle" style="font-size:16px;color:#0E306A;position: absolute;left: 30px;top:0px;"></span><span>您现在的位置：<a
+                        href="/Page/">首页</a> > <a
                         href="/bjjt/">便捷交通</a> > <a id="columnName" style="text-decoration: none;color: #888889;font-size: 12px"></a></span></div>
                 <div class="traffic_information">
                     <div class="content">
@@ -122,7 +123,8 @@
                             <div class="main">
 
                                 <div>
-                                    站台名称：<input name="ctl00$MainContent$StandName" type="text" value="团结桥" id="MainContent_StandName" style="width:140px;"/>
+                                    站台名称：<input name="ctl00$MainContent$StandName" type="text" value="团结桥" id="MainContent_StandName"
+                                                style="width:140px;"/>
                                     <input type="submit" name="ctl00$MainContent$SearchCode" value="搜索" id="MainContent_SearchCode"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     站台编号：<input name="ctl00$MainContent$StandCode" type="text" id="MainContent_StandCode" style="width:140px;"/>
                                     <input type="submit" name="ctl00$MainContent$Watch" value="查看" id="MainContent_Watch"/>
